--- a/Indies/Views/Musicas/Index.cshtml
+++ b/Indies/Views/Musicas/Index.cshtml
@@ -1,18 +1,49 @@
-﻿
+﻿@model IEnumerable<MusicasModel>
 
-@{
-    Layout = null;
-}
+<div class="text-center">
+    <div class="d-flex justify-content-between align-items-center mb-5 mt-5">
+        <h1>Lista de músicas</h1>   
+    </div>
 
-<!DOCTYPE html>
+    @if (TempData["MensagemSucesso"] != null)
+    {
+        <div class="alert alert-success text-success" role="alert">
+            @TempData["MensagemSucesso"]
+        </div>
+    }
 
-<html>
-<head>
-    <title>Indies - Músicas</title>
-</head>
-<body>
-<div>
-    <p>Aqui estão as músicas</p>
+    <table class="table">
+        <thead>
+        
+        <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Artista</th>
+            <th scope="col">Lançamento</th>
+            <th scope="col">Categoria</th>
+            <th scope="col">Controle</th>
+        </tr>
+        
+        </thead>
+        
+        <tbody>
+            @if (Model != null)
+            {
+                @foreach (var musicas in Model)
+                {
+                    <tr>
+                        <td scope="row">
+                            <a href="@musicas.Link" target="_blank">@musicas.Nome</a>
+                        </td>
+                        <td>@musicas.Artista</td>
+                        <td>@musicas.Lancamento</td>
+                        <td>@musicas.Categoria</td>
+                        <td>
+                            <a class="btn btn-primary mx-2"><i class="bi bi-pencil-fill me-2"></i>Editar</a>
+                            <a class="btn btn-danger mx-2"><i class="bi bi-trash-fill me-2"></i>Editar</a>
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
 </div>
-</body>
-</html>
