--- a/Indies/Views/Musicas/Editar.cshtml
+++ b/Indies/Views/Musicas/Editar.cshtml
@@ -1,14 +1,14 @@
 ﻿@model MusicasModel
 
 @{
-    ViewData["Title"] = "Indies - Cadastrar";
+    ViewData["Title"] = "Indies - Editar";
 }
 
 <div class="container bg-dark p-5 rounded-3 overflow-hidden">
     <div class="mb-5 text-center">
-        <h1 class="text-light">Cadastrar músicas</h1>
+        <h1 class="text-light">Cadastrar de Músicas</h1>
     </div>
-    <form method="post" asp-controller="Musicas" asp-action="Cadastrar">
+    <form method="post" asp-controller="Musicas" asp-action="Editar">
         <div class="mb-5">
             <label for="Nome" class="form-label text-light">Nome</label>
             <input type="text" class="form-control" asp-for="Nome" id="Nome" placeholder="Qual o nome da música?"/>
@@ -58,7 +58,7 @@
         </div>
         
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success m-50">Adicionar</button>
+            <button type="submit" class="btn btn-success m-50">Editar</button>
         </div>
     </form>
 </div>
