--- a/Indies/Views/Musicas/Index.cshtml
+++ b/Indies/Views/Musicas/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
     <div class="d-flex justify-content-between align-items-center mb-5 mt-5 text-center">
-        <h1>Lista de músicas</h1>   
+        <h1>Lista de músicas</h1>
         <a class="btn btn-success mx-2" asp-controller="Musicas" asp-action="Cadastrar"> Cadastrar música</a>
     </div>
 
@@ -26,7 +26,6 @@
 
     <table class="table">
         <thead>
-        
         <tr>
             <th scope="col">Nome</th>
             <th scope="col">Artista</th>
@@ -34,28 +33,28 @@
             <th scope="col">Lançamento</th>
             <th scope="col">Controle</th>
         </tr>
-        
         </thead>
-        
         <tbody>
-            @if (Model != null)
+        @if (Model != null)
+        {
+            @foreach (var musicas in Model)
             {
-                @foreach (var musicas in Model)
-                {
-                    <tr>
-                        <td scope="row">
-                            <a href="@musicas.Link" target="_blank">@musicas.Nome</a>
-                        </td>
-                        <td>@musicas.Artista</td>
-                        <td>@musicas.Categoria</td>
-                        <td>@musicas.Lancamento</td>
-                        <td>
-                            <a asp-controller="Musicas" asp-action="Editar" asp-route-id="@musicas.Id" class=  "btn btn-primary mx-2"><i class="bi bi-pencil-fill me-2"></i>Editar</a>
-                            <a asp-controller="Musicas" asp-action="Deletar" asp-route-id="@musicas.Id" class="btn btn-danger mx-2"><i class="bi bi-trash-fill me-2"></i>Deletar</a>
-                        </td>
-                    </tr>
-                }
+                <tr>
+                    <td scope="row">
+                        <a href="@musicas.Link" target="_blank">@musicas.Nome</a>
+                    </td>
+                    <td>@musicas.Artista</td>
+                    <td>@musicas.Categoria</td>
+                    <td>@musicas.Lancamento</td>
+                    <td>
+                        <a asp-controller="Musicas" asp-action="Editar" asp-route-id="@musicas.Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-fill me-2"></i>Editar</a>
+                        <form asp-controller="Musicas" asp-action="Deletar" asp-route-id="@musicas.Id" method="post" style="display: inline-block;">
+                            <button type="submit" class="btn btn-danger mx-2" onclick="return confirm('Tem certeza que deseja excluir esta música?')"><i class="bi bi-trash-fill me-2"></i>Deletar</button>
+                        </form>
+                    </td>
+                </tr>
             }
+        }
         </tbody>
     </table>
 </div>
