--- a/Indies/Views/Musicas/Cadastrar.cshtml
+++ b/Indies/Views/Musicas/Cadastrar.cshtml
@@ -4,9 +4,13 @@
     ViewData["Title"] = "Cadastrar";
 }
 
-<div class="container bg-primary mt-5 p-4 rounded-3 overflow-hidden">
+<head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+</head>
+
+<div class="container bg-dark mt-5 p-4 rounded-3 overflow-hidden">
     <div class="mb-5 text-center">
-        <h1 class="text-light">Cadastrar músicas</h1>
+        <h1 class="text-light" style="font-weight: 200">Cadastrar músicas</h1>
     </div>
     <form method="post" asp-controller="Musicas" asp-action="Cadastrar">
         <div class="mb-5">
