--- a/Indies/Views/Home/Index.cshtml
+++ b/Indies/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <div id="conteudo-principal" class="text-center mt-5 mt-5">
-    <h1 class="text-light">Bem vindos ao Indies!!</h1>
+    <h1 class="text-light" style="font-weight: 200">Bem vindos ao Indies!!</h1>
     <p class="text-light">Registre músicas originais que vão surpreender as pessoas </p>
     <p class="text-light">Clique <a asp-controller="Musicas" asp-action="Index">aqui</a> para começar!</p>
     
