--- a/Indies/Views/Musicas/Index.cshtml
+++ b/Indies/Views/Musicas/Index.cshtml
@@ -6,8 +6,8 @@
 
 <div class="text-center">
     <div class="d-flex justify-content-between align-items-center mb-5 mt-5 text-center">
-        <h1 class="text-light">Lista de músicas</h1>
-        <a class="btn btn-primary mx-2" asp-controller="Musicas" asp-action="Cadastrar"> <i class="bi bi-send"></i> Cadastrar música</a>
+        <h1 class="text-light" style="font-weight: 200">Lista de músicas</h1>
+        <a class="btn btn-primary mx-2" asp-controller="Musicas" asp-action="Cadastrar" style="font-weight: 200"> <i class="bi bi-send"></i> Cadastrar música</a>
     </div>
 
     @if (TempData["MensagemSucesso"] != null)
@@ -47,9 +47,9 @@
                     <td>@musicas.Categoria</td>
                     <td>@musicas.Lancamento</td>
                     <td>
-                        <a asp-controller="Musicas" asp-action="Editar" asp-route-id="@musicas.Id" class="btn btn-info mx-2"><i class="bi bi-pencil-fill me-2"></i>Editar</a>
+                        <a asp-controller="Musicas" asp-action="Editar" asp-route-id="@musicas.Id" class="btn btn-info mx-2" style="font-weight: 200"><i class="bi bi-pencil-fill me-2"></i>Editar</a>
                         <form asp-controller="Musicas" asp-action="Deletar" asp-route-id="@musicas.Id" method="post" style="display: inline-block;">
-                            <button type="submit" class="btn btn-danger mx-2" onclick="return confirm('Tem certeza que deseja excluir esta música?')"><i class="bi bi-trash-fill me-2"></i>Deletar</button>
+                            <button type="submit" class="btn btn-danger mx-2" onclick="return confirm('Tem certeza que deseja excluir esta música?')" style="font-weight: 200"><i class="bi bi-trash-fill me-2"></i>Deletar</button>
                         </form>
                     </td>
                 </tr>
