--- a/Indies/Views/Shared/_Layout.cshtml
+++ b/Indies/Views/Shared/_Layout.cshtml
@@ -8,28 +8,41 @@
     <link rel="stylesheet" href="~/css/bootstrap.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Indies.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 bg-primary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand text-light" asp-area="" asp-controller="Musicas" asp-action="Index">Indies</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item">
-                        <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" asp-area="" asp-controller="Musicas" asp-action="Index">Músicas</a>
-                    </li>
-                </ul>
+    <div>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 bg-primary"
+             data-bs-theme="dark">
+            <div class="container-fluid">
+                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index"><img src="favicon.ico" style="width: 50px"/></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="btn btn-lg btn-primary" asp-area="" asp-controller="Home" asp-action="Index" style="font-weight: 200">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-lg btn-primary" asp-area="" asp-controller="Musicas" asp-action="Index" style="font-weight: 200">Músicas</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+        
+        <div>
+            
+            
         </div>
-    </nav>
+    </div>
 </header>
 <div class="container">
     <main role="main" class="pb-3">
