--- a/Indies/Views/Usuarios/Cadastrar.cshtml
+++ b/Indies/Views/Usuarios/Cadastrar.cshtml
@@ -7,7 +7,7 @@
 <div class="container bg-dark mt-5 p-4 rounded-3 overflow-hidden">
 
     <div class="mb-5 text-center">
-        <h1 class="text-light" style="font-weight: 200">Login</h1>
+        <h1 class="text-light" style="font-weight: 200">Cadastrar</h1>
     </div>
     
     <form method="post" asp-controller="Usuarios" asp-action="Cadastrar">
@@ -31,7 +31,7 @@
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success m-50">Login</button>
+            <button type="submit" class="btn btn-success m-50">Cadastrar</button>
         </div>
         
     </form>
