--- a/Indies/Views/Musicas/Cadastrar.cshtml
+++ b/Indies/Views/Musicas/Cadastrar.cshtml
@@ -1,4 +1,4 @@
-﻿@model MusicasModel
+﻿@model Indies.Models.MusicasModel
 
 @{
     ViewData["Title"] = "Cadastrar";
@@ -13,6 +13,7 @@
         <h1 class="text-light" style="font-weight: 200">Cadastrar músicas</h1>
     </div>
     <form method="post" asp-controller="Musicas" asp-action="Cadastrar">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="mb-3">
             <label for="Nome" class="form-label text-light">Nome</label>
             <input type="text" class="form-control" asp-for="Nome" id="Nome" placeholder="Qual o nome da música?"/>
@@ -21,14 +22,15 @@
 
         <div class="mb-3">
             <label for="Artista" class="form-label text-light">Artista</label>
-            <input type="text" class="form-control" asp-for="Artista" id="Artista" placeholder="Qual o nome do(a) artista?"/>
+            <input type="text" class="form-control" asp-for="Artista" id="Artista"
+                   placeholder="Qual o nome do(a) artista?"/>
             <span asp-validation-for="Artista" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
             <label for="Categoria" class="form-label text-light">Categoria</label>
             <select class="form-select" asp-for="Categoria" id="Categoria">
-                @if (ViewBag.Categorias != null) 
+                @if (ViewBag.Categorias != null)
                 {
                     @foreach (var categoria in ViewBag.Categorias)
                     {
@@ -51,7 +53,8 @@
 
         <div class="mb-3">
             <label for="Lancamento" class="form-label text-light">Lançamento</label>
-            <input type="date" class="form-control" asp-for="Lancamento" id="Lancamento" placeholder="Qual o Lançamento da música?"/>
+            <input type="date" class="form-control" asp-for="Lancamento" id="Lancamento"
+                   placeholder="Qual o Lançamento da música?"/>
             <span asp-validation-for="Lancamento" class="text-danger"></span>
         </div>
 
@@ -60,7 +63,7 @@
             <input type="text" class="form-control" asp-for="Link" id="Link" placeholder="Cole o link"/>
             <span asp-validation-for="Link" class="text-danger"></span>
         </div>
-        
+
         <div class="d-flex gap-5 mt-5">
             <button type="submit" class="btn btn-success m-50">Adicionar</button>
         </div>
