--- a/Indies/Views/Shared/_Layout.cshtml
+++ b/Indies/Views/Shared/_Layout.cshtml
@@ -18,13 +18,27 @@
         rel="stylesheet">
 </head>
 <body>
+@if (TempData["MensagemErro"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["MensagemErro"]
+    </div>
+}
+
+@if (TempData["MensagemSucesso"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["MensagemSucesso"]
+    </div>
+}
 <header>
     <div>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 bg-primary"
              data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index"><img
-                        src="favicon.ico" style="width: 50px"/></a>
+                <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="favicon.ico" style="width: 50px"/>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -44,8 +58,16 @@
                 </div>
 
                 <div>
+
+                    @{
+                        var nomeCompleto = Context.Session.GetString("NomeUsuario");
+                        string primeiroNome = string.IsNullOrEmpty(nomeCompleto)
+                            ? "Usuário"
+                            : nomeCompleto.Split(" ")[0];
+                    }
+                    
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#meuModal">
-                        <i class="bi bi-person"></i>
+                        <i class="bi bi-person"></i> @primeiroNome
                     </button>
 
                     <div class="modal fade" id="meuModal" tabindex="-1" aria-labelledby="meuModalLabel"
@@ -53,41 +75,31 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    @{
-                                        string nomeCompleto = Context.Session.GetString("NomeUsuario");
-                                        string primeiroNome = "";
 
-                                        if (!string.IsNullOrEmpty(nomeCompleto))
-                                        {
-                                            int posicaoEspaco = nomeCompleto.IndexOf(" ");
-                                            if (posicaoEspaco > 0)
-                                            {
-                                                primeiroNome = nomeCompleto.Substring(0, posicaoEspaco);
-                                            }
-                                            else
-                                            {
-                                                primeiroNome = nomeCompleto;
-                                            }
-                                        }
-                                    }
-                                    <h5 class="modal-title" id="meuModalLabel">@primeiroNome</h5>
+
+                                    <h5 class="modal-title text-light" id="meuModalLabel">@primeiroNome</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Fechar"></button>
                                 </div>
                                 <div class="modal-body">
-                                    @if (string.IsNullOrEmpty(Context.Session.GetString("NomeUsuario")))
+                                    @if (string.IsNullOrEmpty(nomeCompleto))
                                     {
-                                        <a asp-controller="Usuarios" asp-action="Cadastrar" class="btn btn-primary">Cadastrar</a>
+                                        <p>Faça o cadastro ou entre com a sua conta.</p>
                                     }
                                     else
                                     {
-                                        <p>Seja bem vindo @Context.Session.GetString("NomeUsuario")</p>
+                                        <p class="text-light">Seja bem-vindo, <strong>@nomeCompleto</strong>!</p>
                                     }
                                 </div>
                                 <div class="modal-footer">
-                                    @if (!string.IsNullOrEmpty(Context.Session.GetString("NomeUsuario")))
+                                    @if (!string.IsNullOrEmpty(nomeCompleto))
                                     {
                                         <a asp-controller="Usuarios" asp-action="Logout" class="btn btn-danger">Sair</a>
+                                    }
+                                    else
+                                    {
+                                        <a asp-controller="Usuarios" asp-action="Entrar" class="btn btn-primary">Entrar</a>
+                                        <a asp-controller="Usuarios" asp-action="Cadastrar" class="btn btn-primary">Cadastrar</a>
                                     }
                                 </div>
                             </div>
@@ -104,12 +116,11 @@
     </main>
 </div>
 
-<footer class="footer text-muted mt-5 mt-5">
+<footer class="footer text-muted mt-5">
     <div class="container">
         &copy; 2025 - Indies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        
         <a href="#">Instagram</a>
-        <a href="#">Linkedin</a>
+        <a href="#">LinkedIn</a>
         <a href="#">GitHub</a>
     </div>
 </footer>
