--- a/Indies/Views/Musicas/Editar.cshtml
+++ b/Indies/Views/Musicas/Editar.cshtml
@@ -9,6 +9,7 @@
         <h1 class="text-light">Cadastrar de Músicas</h1>
     </div>
     <form method="post" asp-controller="Musicas" asp-action="Editar">
+        <input type="hidden" asp-for="Id"/>
         <div class="mb-5">
             <label for="Nome" class="form-label text-light">Nome</label>
             <input type="text" class="form-control" asp-for="Nome" id="Nome" placeholder="Qual o nome da música?"/>
@@ -24,7 +25,7 @@
         <div class="mb-5">
             <label for="Categoria" class="form-label text-light">Categoria</label>
             <select class="form-select" asp-for="Categoria" id="Categoria">
-                @if (ViewBag.Categorias != null) 
+                @if (ViewBag.Categorias != null)
                 {
                     @foreach (var categoria in ViewBag.Categorias)
                     {
@@ -56,7 +57,7 @@
             <input type="text" class="form-control" asp-for="Link" id="Link" placeholder="Cole o link"/>
             <span asp-validation-for="Link" class="text-danger"></span>
         </div>
-        
+
         <div class="d-flex gap-5 mt-5">
             <button type="submit" class="btn btn-success m-50">Editar</button>
         </div>
