--- a/Indies/Views/Shared/_Layout.cshtml
+++ b/Indies/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
 </div>
 
 <footer class="footer text-muted mt-5">
-    <div class="container">
+    <div class="container text-light">
         &copy; 2025 - Indies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         <a href="#">Instagram</a>
         <a href="#">LinkedIn</a>
