--- a/Indies/Views/Musicas/Index.cshtml
+++ b/Indies/Views/Musicas/Index.cshtml
@@ -24,7 +24,7 @@
         </div>
     }
 
-    <table class="table bg-primary table-hover rounded-3 overflow-hidden p-5">
+    <table id="TabelaMusicas" class="table bg-primary table-hover rounded-3 overflow-hidden p-5">
         <thead>
         <tr>
             <th scope="col">Nome</th>
