--- a/Indies/Views/Shared/_Layout.cshtml
+++ b/Indies/Views/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="~/css/bootstrap.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Indies.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.datatables.net/v/dt/dt-2.2.2/datatables.min.css" rel="stylesheet" integrity="sha384-2vMryTPZxTZDZ3GnMBDVQV8OtmoutdrfJxnDTg0bVam9mZhi7Zr3J1+lkVFRr71f" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -24,7 +25,7 @@
              data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="favicon.ico" style="width: 50px"/>
+                    <img src="/favicon.ico" style="width: 50px"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent"
@@ -76,6 +77,7 @@
                                     else
                                     {
                                         <p class="text-light">Seja bem-vindo, <strong>@nomeCompleto</strong>!</p>
+                                        
                                     }
                                 </div>
                                 <div class="modal-footer">
@@ -111,6 +113,7 @@
         <a href="#">GitHub</a>
     </div>
 </footer>
+<script src="https://cdn.datatables.net/v/dt/dt-2.2.2/datatables.min.js" integrity="sha384-2Ul6oqy3mEjM7dBJzKOck1Qb/mzlO+k/0BQv3D3C7u+Ri9+7OBINGa24AeOv5rgu" crossorigin="anonymous"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
